tests/neg/i2673.scala
// scalac: -Xfatal-warnings

package Foos

class Foo // error
class foo
